--- a/app/src/main/res/layout/fragment_charla_enviada.xml
+++ b/app/src/main/res/layout/fragment_charla_enviada.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/azul_oscuro"
     android:layout_width="match_parent"
-    tools:context=".ui.Privada.Privada"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/azul_oscuro"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.Privada.CharlaEnviada">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -53,70 +53,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:hint="Nombre"
-                    android:padding="8dp"
-                    android:textColor="#000000" />
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:hint="Correo"
-                    android:padding="8dp"
-                    android:textColor="#000000" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@color/teal_200"
                 android:orientation="horizontal">
 
-                <EditText
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_weight="1"
-                    android:background="#FFFFFF"
-                    android:hint="# Ficha"
-                    android:padding="8dp"
-                    android:textColor="#000000" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="#FFFFFF"
-                android:orientation="horizontal">
-
-                <Spinner
-                    android:id="@+id/jornada_spinner"
-                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:entries="@array/jornada_options"
-                    android:prompt="@string/jornada_prompt"
-                    android:spinnerMode="dropdown" />
+                    android:layout_gravity="center"
+                    android:text="Tu solicitud ha sido enviada con exito a nuestros profesionales en las siguientes 48 horas te llegara una notificacion dando respuesta a tu solicitud"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
             </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:background="@color/azul_oscuro"
+                android:text="INICIO" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -166,7 +123,7 @@
                 android:textSize="20dp" />
 
             <Button
-                android:id="@+id/btn_enviar_solicitud"
+                android:id="@+id/btn_enviar_solicitud2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -174,8 +131,7 @@
                 android:background="@color/azul_oscuro"
                 android:text="Enviar solicitud"
                 android:textColor="@android:color/white"
-                android:textSize="16dp"
-                android:onClick="irCharlaEnviada"/>
+                android:textSize="16dp" />
 
         </LinearLayout>
 
