Solicitar Charlas y Fragment X Fragment
Signed-off-by: Santoss44 <billialejosantosramires@gmail.com>

--- a/app/src/main/res/layout/fragment_charla_enviada.xml
+++ b/app/src/main/res/layout/fragment_charla_enviada.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/azul_oscuro"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.Privada.CharlaEnviada">
+    tools:context=".ui.privada.CharlaEnviada">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
