--- a/app/src/main/res/layout/fragment_privada.xml
+++ b/app/src/main/res/layout/fragment_privada.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/azul_oscuro"
     android:layout_width="match_parent"
-    tools:context=".ui.Privada.Privada"
+    tools:context=".ui.privada.Privada"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
