--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,7 +34,7 @@
         tools:layout="@layout/fragment_pqrs" />
     <fragment
         android:id="@+id/privada"
-        android:name="com.example.menu_cap.ui.Privada.Privada"
+        android:name="com.example.menu_cap.ui.privada.Privada"
         android:label="PRIVADA"
         tools:layout="@layout/fragment_privada" />
     <fragment
