Termino eventos y configuracion general

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,6 @@
         app:menu="@menu/activity_main_drawer"
         android:background="@color/azul_oscuro"
         app:itemTextColor="@color/white"
-        app:itemIconTint="@color/verde_pagina"
+        app:itemIconTint="@color/verde_claro"
         />
 </androidx.drawerlayout.widget.DrawerLayout>
