--- a/app/src/main/res/layout/fragment_charla_enviada.xml
+++ b/app/src/main/res/layout/fragment_charla_enviada.xml
@@ -21,7 +21,7 @@
             android:layout_marginStart="21dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="21dp"
-            android:background="@color/verde_pagina"
+            android:background="@color/verde_claro"
             android:gravity="center"
             android:text="Solicitar Charlas"
             android:textColor="#FFFFFF"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="80dp"
-            android:background="@color/verde_pagina"
+            android:background="@color/verde_claro"
             android:orientation="vertical"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
