--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="azul_oscuro">#00324d</color>
-    <color name="verde_pagina">#39a900</color>
+    <color name="verde_claro">#15a012</color>
+
 </resources>
